test/runnable/extra-files/externmangle.d

extern(C++) int test1(); 


void main()
{
    assert(test1());
}
