test/fail_compilation/fail285.d

struct S
{
    int x;
}

void main()
{
    int x;
    S s;
    with (s)
    {
	x++;
    }
}
